--- a/style.css
+++ b/style.css
@@ -1,211 +1,255 @@
 body {
-    background-color: #2c2e3b;
-    height: 100vh;
-    width: 100vw;
-    color: #de41cd;
-    font-size: large;
-text-shadow: 1px 1px #527572;
-margin-top: 0;
-margin-left: 0;
+  background-color: #2c2e3b;
+  height: 100vh;
+  width: 100vw;
+  color: #de41cd;
+  font-size: large;
+  text-shadow: 1px 1px #527572;
+  margin-top: 0;
+  margin-left: 0;
 }
 
-button {
-    background-color: #de41cd;
-    font-size: large;
-    font-weight: bold;
-    border-radius: 8px;
-    box-shadow: 1px 1px #93c8c4;
-    min-width: 100px;
-    min-height: 20px;
+.button {
+  background-color: #de41cd;
+  font-size: large;
+  font-weight: bold;
+  border-radius: 8px;
+  box-shadow: 1px 1px #93c8c4;
+  min-width: 100px;
+  min-height: 20px;
 }
 
 h1 {
-    font-family: 'Anton', sans-serif;
+  font-family: "Anton", sans-serif;
 }
 
 .container {
-    display:grid;
-    grid-template-areas: "sidebar header header header"
+  display: grid;
+  grid-template-areas:
+    "sidebar header header header"
     "sidebar main main main"
     "sidebar main main main"
     "sidebar main main main";
 }
 
 .header {
-grid-area: header;
-display:grid;
-grid-template-areas:
-"header-top"
-"header-main";
-/* height: 20vh; */
-min-height: 20vh;
-width: auto;
-background-color: #93c8c4;
-font-weight: bold;
-box-shadow: 1px 1px #527572;
+  grid-area: header;
+  display: grid;
+  grid-template-areas:
+    "header-top"
+    "header-main";
+  /* height: 20vh; */
+  min-height: 20vh;
+  width: auto;
+  background-color: #93c8c4;
+  font-weight: bold;
+  box-shadow: 1px 1px #527572;
 }
 
 .header-top {
-    padding-top: 4vh;
-    display: grid;
-    grid-template-areas: "searchbar . . . . settings";
+  padding-top: 4vh;
+  display: grid;
+  grid-template-areas: "searchbar . . . . settings";
 }
 
 .searchbar {
-    grid-area: searchbar;
-    display: grid;
-    grid-template-areas: "search-icon search-field";
+  grid-area: searchbar;
+  display: grid;
+  grid-template-areas: "search-icon search-field";
 }
 
 .search-icon {
-    grid-area: search-icon;
+  grid-area: search-icon;
+  background-image: url(./SVGs-and-Images/magnify.svg);
+  background-size: cover;
+  height: 20px;
+  width: 20px;
 }
 
 .search-field {
-    grid-area: search-field;
-    height: 1.5em;
+  grid-area: search-field;
+  height: 1.5em;
 }
 
 .settings {
-    grid-area: settings;
+  grid-area: settings;
+}
+
+.notifications {
+  background: none;
+  color: inherit;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  border: none;
+
+  background-image: url(./SVGs-and-Images/bell-badge.svg);
+  background-size: cover;
+  height: 20px;
+  width: 20px;
+}
+
+.user-themes {
+  background: none;
+  background-image: url(./SVGs-and-Images/profile-pic-small-copy.jpg);
+  background-size: cover;
+  height: 4vh;
+  width: 4vh;
+  border-radius: 90px;
+}
+
+#userGreet {
+  background: none;
+  background-color: inherit;
+  color: inherit;
+  padding: 0;
+  font: inherit;
+  cursor: pointer;
+  outline: inherit;
+  border: none;
+  font-size: 3vh;
 }
 
 .header-main {
-    display: grid;
-    grid-template-areas: "profile-pic greeting . . . user-create-content";
+  display: grid;
+  grid-template-areas: "profile-pic greeting . . . user-create-content";
 }
 
 .profile-pic {
-    grid-area: profile-pic;
+  grid-area: profile-pic;
+  border-radius: 9px;
+  margin-left: 20px;
 }
-
 
 .greeting {
-    grid-area: greeting;
+  grid-area: greeting;
 }
 
-
 .user-create-content {
-    grid-area: user-create-content;
+  grid-area: user-create-content;
 }
 
 .sidebar {
-grid-area: sidebar;
-display: grid;
-grid-template-areas: "brand-logo"
-"nav-links"
-"general-settings"
-"."
-"."
-".";
-height: 110vh;
-width: 20vw;
-background-color: #b16eb5;
-min-width: 250px;
+  grid-area: sidebar;
+  display: grid;
+  grid-template-areas:
+    "brand-logo"
+    "nav-links"
+    "general-settings"
+    "."
+    "."
+    ".";
+  height: 110vh;
+  width: 20vw;
+  background-color: #b16eb5;
+  min-width: 250px;
 }
 
 .brand-logo {
-    grid-area: brand-logo;
-    display: grid;
-    grid-template-areas: 
+  grid-area: brand-logo;
+  display: grid;
+  grid-template-areas:
     ". . ."
     ". logo-image brand-logo-text"
     ". . .";
 }
 
 .logo-image {
-    grid-area: logo-image;
+  grid-area: logo-image;
 }
 
 .brand-logo-text {
-    grid-area: brand-logo-text;
+  grid-area: brand-logo-text;
 }
 
-.nav-links, .general-settings {
-    width: 200px;
-    display: grid;
-    grid-template-columns: 1;
+.nav-links,
+.general-settings {
+  width: 200px;
+  display: grid;
+  grid-template-columns: 1;
 }
 
 .nav-links {
-    grid-area: nav-links;
-    display: grid;
-    grid-template-columns: 1;
+  grid-area: nav-links;
+  display: grid;
+  grid-template-columns: 1;
 }
 
 .general-settings {
-    grid-area: general-settings;
+  grid-area: general-settings;
 }
 
 .main {
-    grid-area: main;
-    display: grid;
-    grid-template-areas: "user-projects user-projects user-projects announcements"
+  grid-area: main;
+  display: grid;
+  grid-template-areas:
+    "user-projects user-projects user-projects announcements"
     "user-projects user-projects user-projects announcements"
     "user-projects user-projects user-projects trending"
     "user-projects user-projects user-projects trending";
-    min-width: 80vw;
-    min-height: 80vh;
+  min-width: 80vw;
+  min-height: 80vh;
 }
 
 .projects-container {
-    grid-area: user-projects;
-    padding-left: 10px;
+  grid-area: user-projects;
+  padding-left: 10px;
 }
 
 .user-projects {
-    display: grid;
-    gap: 15px;
-    height: 70vh;
-    grid-template: repeat(3, 1fr) / auto auto;
+  display: grid;
+  gap: 15px;
+  height: 70vh;
+  grid-template: repeat(3, 1fr) / auto auto;
 }
 
 .project {
-    background-color: #b16eb5;
-    color: #072c94;
-    border-radius: 8px;
-    box-shadow: 2px 2px 1px #516f6c;
+  background-color: #b16eb5;
+  color: #072c94;
+  border-radius: 8px;
+  box-shadow: 2px 2px 1px #516f6c;
 }
 
 .announcements-container {
-    grid-area: announcements;
-    height: 40vh;
+  grid-area: announcements;
+  height: 40vh;
 }
 
 .announcements {
-    grid-template-columns: 3;
-    grid-template-areas: "announcement-cell . . ";
-    padding: 10px;
+  grid-template-columns: 3;
+  grid-template-areas: "announcement-cell . . ";
+  padding: 10px;
 }
 
 .announcements-cell {
-    background-color: #b16eb5;
-    color: #072c94;
-    grid-area: announcement-cell;
-    width: 150px;
-    border: 1px solid black;
-    border-radius: 8px;
-    box-shadow: 2px 2px #93c8c4;
-    font-size: medium;
+  background-color: #b16eb5;
+  color: #072c94;
+  grid-area: announcement-cell;
+  width: 150px;
+  border: 1px solid black;
+  border-radius: 8px;
+  box-shadow: 2px 2px #93c8c4;
+  font-size: medium;
 }
 
 .trending-container {
-    grid-area: trending;
-    box-sizing: border-box;
-    height: 40vh;
+  grid-area: trending;
+  box-sizing: border-box;
+  height: 40vh;
 }
 
 .trending {
-    display: grid;
-    padding: 10px;
+  display: grid;
+  padding: 10px;
 }
 
 .trending-cell {
-    background-color: #b16eb5; 
-    color: #072c94;  
-    border: 1px solid black;
-    width: 150px;
-    border-radius: 8px;
-    box-shadow: 2px 2px #93c8c4;
-    font-size: medium;
+  background-color: #b16eb5;
+  color: #072c94;
+  border: 1px solid black;
+  width: 150px;
+  border-radius: 8px;
+  box-shadow: 2px 2px #93c8c4;
+  font-size: medium;
 }
