--- a/style.css
+++ b/style.css
@@ -1,8 +1,6 @@
 body {
-  background-color: #2c2e3b;
   height: 100vh;
   width: 100vw;
-  color: #de41cd;
   font-size: large;
   text-shadow: 1px 1px #527572;
   margin-top: 0;
@@ -10,17 +8,12 @@ body {
 }
 
 .button {
-  background-color: #de41cd;
   font-size: large;
   font-weight: bold;
   border-radius: 8px;
   box-shadow: 1px 1px #93c8c4;
   min-width: 100px;
   min-height: 20px;
-}
-
-h1 {
-  font-family: "Anton", sans-serif;
 }
 
 .container {
@@ -38,10 +31,8 @@ h1 {
   grid-template-areas:
     "header-top"
     "header-main";
-  /* height: 20vh; */
   min-height: 20vh;
   width: auto;
-  background-color: #93c8c4;
   font-weight: bold;
   box-shadow: 1px 1px #527572;
 }
@@ -68,7 +59,10 @@ h1 {
 
 .search-field {
   grid-area: search-field;
-  height: 1.5em;
+  height: 1em;
+  border-radius: 9px;
+  border: 1px solid rgb(208, 208, 208);
+  background-color: rgb(235, 235, 235);
 }
 
 .settings {
@@ -140,10 +134,9 @@ h1 {
     "."
     "."
     ".";
-  height: 110vh;
   width: 20vw;
-  background-color: #b16eb5;
   min-width: 250px;
+  align-items: center;
 }
 
 .brand-logo {
@@ -205,15 +198,12 @@ h1 {
 }
 
 .project {
-  background-color: #b16eb5;
-  color: #072c94;
   border-radius: 8px;
-  box-shadow: 2px 2px 1px #516f6c;
+  text-align: center;
 }
 
 .announcements-container {
   grid-area: announcements;
-  height: 40vh;
 }
 
 .announcements {
@@ -223,20 +213,17 @@ h1 {
 }
 
 .announcements-cell {
-  background-color: #b16eb5;
-  color: #072c94;
   grid-area: announcement-cell;
   width: 150px;
   border: 1px solid black;
   border-radius: 8px;
-  box-shadow: 2px 2px #93c8c4;
   font-size: medium;
+  margin-bottom: 2vh;
 }
 
 .trending-container {
   grid-area: trending;
   box-sizing: border-box;
-  height: 40vh;
 }
 
 .trending {
@@ -245,11 +232,9 @@ h1 {
 }
 
 .trending-cell {
-  background-color: #b16eb5;
-  color: #072c94;
   border: 1px solid black;
   width: 150px;
   border-radius: 8px;
-  box-shadow: 2px 2px #93c8c4;
   font-size: medium;
+  margin-bottom: 2vh;
 }
