--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 body {
+  background-color: rgb(173, 182, 191);
   height: 100vh;
   width: 100vw;
   font-size: large;
   text-shadow: 1px 1px #527572;
   margin-top: 0;
   margin-left: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .button {
@@ -14,6 +17,26 @@ body {
   box-shadow: 1px 1px #93c8c4;
   min-width: 100px;
   min-height: 20px;
+}
+
+.button-style {
+  background-color: skyblue;
+  font-size: large;
+  font-weight: bold;
+  border-radius: 90px;
+  border: none;
+  min-width: 100px;
+  min-height: 20px;
+}
+
+.sidebar-button {
+  background-color: skyblue;
+  border: none;
+  font-size: large;
+  font-weight: bold;
+  min-width: 100px;
+  min-height: 20px;
+  margin-left: 5vw;
 }
 
 .container {
@@ -26,6 +49,7 @@ body {
 }
 
 .header {
+  background-color: rgba(245, 245, 245, 0.861);
   grid-area: header;
   display: grid;
   grid-template-areas:
@@ -51,6 +75,8 @@ body {
 
 .search-icon {
   grid-area: search-icon;
+  margin-left: 5vw;
+  margin-right: 1vw;
   background-image: url(./SVGs-and-Images/magnify.svg);
   background-size: cover;
   height: 20px;
@@ -61,8 +87,8 @@ body {
   grid-area: search-field;
   height: 1em;
   border-radius: 9px;
-  border: 1px solid rgb(208, 208, 208);
-  background-color: rgb(235, 235, 235);
+  border: 1px solid rgb(235, 235, 235);
+  background-color: rgba(177, 169, 169, 0.535);
 }
 
 .settings {
@@ -125,6 +151,7 @@ body {
 }
 
 .sidebar {
+  background-color: skyblue;
   grid-area: sidebar;
   display: grid;
   grid-template-areas:
