--- a/style.css
+++ b/style.css
@@ -2,8 +2,7 @@ body {
   background-color: #bfdbfe;
   height: 100vh;
   width: 100vw;
-  font-size: large;
-  text-shadow: 1px 1px #527572;
+  /* font-size: large; */
   margin-top: 0;
   margin-left: 0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
@@ -22,15 +21,13 @@ body {
 .button-style {
   color: white;
   background-color: #0284c7;
-  font-size: large;
-  font-weight: bold;
   border-radius: 90px;
   border: none;
-  min-width: 100px;
-  min-height: 20px;
+  min-width: 70px;
 }
 
 .sidebar-button {
+  text-align: left;
   color: white;
   background-color: #0284c7;
   border: none;
@@ -58,7 +55,6 @@ body {
     "header-top"
     "header-main";
   min-height: 20vh;
-  width: auto;
   font-weight: bold;
 }
 
@@ -84,7 +80,7 @@ body {
 
 .search-field {
   grid-area: search-field;
-  width: 5vw;
+  width: 35vw;
   height: 1em;
   border-radius: 9px;
   border: 1px solid rgb(235, 235, 235);
@@ -132,14 +128,21 @@ body {
 }
 
 .header-main {
+  margin-top: 3vh;
   display: grid;
-  grid-template-areas: "profile-pic greeting . . . user-create-content";
+  grid-template-areas: "profile-pic greeting ... user-create-content";
 }
 
 .profile-pic {
+  background: none;
+  background-image: url(./SVGs-and-Images/profile-pic-small-copy.jpg);
+  background-size: cover;
+  height: 4vh;
+  width: 4vh;
+  border-radius: 90px;
+
   grid-area: profile-pic;
-  border-radius: 9px;
-  margin-left: 20px;
+  margin: 0 0 0 5vw;
 }
 
 .greeting {
@@ -162,7 +165,6 @@ body {
     "."
     "."
     ".";
-  width: 20vw;
   min-width: 250px;
   align-items: center;
 }
@@ -206,6 +208,7 @@ body {
 }
 
 .main {
+  margin-right: 3vw;
   padding-top: 7vh;
   grid-area: main;
   display: grid;
@@ -214,7 +217,7 @@ body {
     "user-projects user-projects user-projects announcements"
     "user-projects user-projects user-projects trending"
     "user-projects user-projects user-projects trending";
-  min-width: 80vw;
+  min-width: 70vw;
   min-height: 80vh;
 }
 
@@ -231,13 +234,21 @@ body {
 }
 
 .project {
+  border-left: 4px solid goldenrod;
+  width: 25vw;
   background-color: white;
   border-radius: 8px;
-  text-align: center;
+  text-align: left;
+  box-shadow: 1px 1px 1px gray;
 }
 
 .project-title {
   font-weight: 700;
+}
+
+.project-text {
+  font-size: small;
+  font-weight: 100;
 }
 
 .project-links {
@@ -247,12 +258,16 @@ body {
 
 .announcements-container {
   grid-area: announcements;
+  margin-left: 2vw;
 }
 
 .announcements {
+  border-radius: 8px;
+  text-align: left;
+  box-shadow: 1px 1px 1px gray;
+  background-color: white;
   grid-template-columns: 3;
   grid-template-areas: "announcement-cell . . ";
-  padding: 10px;
 }
 
 .announcements-cell {
@@ -262,15 +277,20 @@ body {
   border: none;
   border-radius: 8px;
   font-size: medium;
-  margin-bottom: 2vh;
+  margin-bottom: 1.5vh;
 }
 
 .trending-container {
   grid-area: trending;
   box-sizing: border-box;
+  margin-left: 2vw;
 }
 
 .trending {
+  background-color: white;
+  border-radius: 8px;
+  text-align: left;
+  box-shadow: 1px 1px 1px gray;
   display: grid;
   padding: 10px;
 }
