--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ body {
     "header-main";
   min-height: 20vh;
   font-weight: bold;
+  box-shadow: 0px 1px 5px rgb(166, 165, 165);
 }
 
 .header-top {
