finished rewriting the project in js, need to fix a few things in CSS

--- a/style.css
+++ b/style.css
@@ -40,7 +40,7 @@ body {
   margin: 1vh 0 0 5vw;
 }
 
-.container {
+#container {
   display: grid;
   grid-template-areas:
     "sidebar header header header"
